[gd_scene load_steps=2 format=3 uid="uid://d3aik1ux28bp5"]

[ext_resource type="Script" uid="uid://c2dxsxn76pymo" path="res://player/abilities/dash_ability.gd" id="1_i2pu6"]

[node name="DashAbility" type="Node2D"]
script = ExtResource("1_i2pu6")
dash_speed = 500.0

[node name="DashCooldown" type="Timer" parent="."]

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
